@@ -1,0 +1,103 @@
+// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; tab-width: 8 -*-
+//
+// S4.cpp: Rcpp R/C++ interface class library -- S4 objects
+//
+// Copyright (C) 2010	Dirk Eddelbuettel and Romain Francois
+//
+// This file is part of Rcpp.
+//
+// Rcpp is free software: you can redistribute it and/or modify it
+// under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 2 of the License, or
+// (at your option) any later version.
+//
+// Rcpp is distributed in the hope that it will be useful, but
+// WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
+
+#include <Rcpp/Reference.h>
+#include <Rcpp/exceptions.h>
+#include <Rcpp/Vector.h>
+
+namespace Rcpp {
+
+	Reference::Reference() : S4(){}
+	
+	Reference::Reference(SEXP x) throw(not_reference) : S4(){
+		set( x) ;
+	}
+	
+	Reference::Reference( const Reference& other) : S4(){
+		setSEXP( other.asSexp() ) ;	
+	}
+	
+	Reference::Reference( const RObject::SlotProxy& proxy ) throw(not_reference) : S4() {
+		set( proxy ) ;
+	}
+	Reference::Reference( const RObject::AttributeProxy& proxy ) throw(not_reference) : S4() {
+		set( proxy ) ;
+	}
+	
+	Reference& Reference::operator=( const Reference& other){
+		setSEXP( other.asSexp() ) ;
+		return *this ;
+	}
+	
+	Reference& Reference::operator=( SEXP other ) throw(not_reference) {
+		set( other ) ;
+		return *this ;
+	}
+	
+	Reference::Reference( const std::string& klass ) throw(S4_creation_error,reference_creation_error) : S4(klass){
+		// TODO: check that klass is indeed a reference class
+	}
+	
+	void Reference::set( SEXP x) throw(not_reference) {
+		// TODO: check that x is of a reference class
+	    if( ! ::Rf_isS4(x) ){
+			throw not_reference() ;
+		} else{
+			setSEXP( x) ;
+		}
+	}
+	
+	                  
+	
+	Reference::FieldProxy::FieldProxy( const Reference& v, const std::string& name) throw(no_such_field) : 
+	    parent(v), field_name(name) {
+    	if( !R_has_slot( v, Rf_install(name.c_str())) ){
+    		throw no_such_slot() ; 
+    	}
+    }
+
+    Reference::FieldProxy& Reference::FieldProxy::operator=(const FieldProxy& rhs){
+    	set( rhs.get() ) ;
+    	return *this ;
+    }
+    
+    
+    SEXP Reference::FieldProxy::get() const {
+    	// TODO: get the field
+        return R_NilValue ;
+        // return R_do_slot( parent, Rf_install( slot_name.c_str() ) ) ;	
+    }
+    
+    void Reference::FieldProxy::set( SEXP x) const {
+    	// TODO: set the field
+        
+        // // the SEXP might change (.Data)
+    	// SEXP new_obj = PROTECT( R_do_slot_assign( 
+    	// 	parent, 
+    	// 	Rf_install( slot_name.c_str() ), 
+    	// 	x
+    	// 	) ) ;
+    	// const_cast<RObject&>(parent).setSEXP( new_obj ) ;
+    	// UNPROTECT(1) ;  
+    }
+
+	
+} // namespace Rcpp
