@@ -36,6 +36,7 @@ RCPP_EXCEPTION_WHAT(exception)
 
 RCPP_EXCEPTION_WHAT(not_compatible)
 RCPP_EXCEPTION_WHAT(S4_creation_error)
+RCPP_EXCEPTION_WHAT(reference_creation_error)
 RCPP_EXCEPTION_WHAT(no_such_binding)
 RCPP_EXCEPTION_WHAT(binding_not_found)
 RCPP_EXCEPTION_WHAT(binding_is_locked)
@@ -51,7 +52,9 @@ RCPP_SIMPLE_EXCEPTION_WHAT(not_a_matrix, "not a matrix" )
 RCPP_SIMPLE_EXCEPTION_WHAT(index_out_of_bounds, "index out of bounds" )
 RCPP_SIMPLE_EXCEPTION_WHAT(parse_error, "parse error") 
 RCPP_SIMPLE_EXCEPTION_WHAT(not_s4, "not an S4 object" )
+RCPP_SIMPLE_EXCEPTION_WHAT(not_reference, "not a reference S4 object" )
 RCPP_SIMPLE_EXCEPTION_WHAT(no_such_slot, "no such slot" )
+RCPP_SIMPLE_EXCEPTION_WHAT(no_such_field, "no such field" )
 RCPP_SIMPLE_EXCEPTION_WHAT(not_a_closure, "not a closure" )
 RCPP_SIMPLE_EXCEPTION_WHAT(no_such_function, "no such function" )
 RCPP_SIMPLE_EXCEPTION_WHAT(unevaluated_promise, "promise not yet evaluated" )
